lib/src/compiler/tests/testdata/errors/50.out
error[E101]: mismatching types
 --> line:4:53
  |
4 |     for all k,v in test_proto2.map_int64_string : ( k == "1" )
  |                                                     ^ this expression is `integer`
  |                                                          ^^^ this expression is `string`
  |